# rust-string-auto-indent

./: Cargo.toml  README.md
.cargo/: deny.toml
.github/workflows/: rust-lint.yml
examples/: basic.rs
src/: lib.rs  line_ending.rs
